Add Excluded Terms container and Topical Trend term section

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.9.3",
     "@fontsource/inter": "^4.5.11",
     "@fontsource/manrope": "^4.5.10",
+    "@fontsource/open-sans": "^4.5.10",
     "@fontsource/space-grotesk": "^4.5.8",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
