Add Redux Packages

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fontsource/manrope": "^4.5.10",
     "@fontsource/open-sans": "^4.5.10",
     "@fontsource/space-grotesk": "^4.5.8",
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
