--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@fontsource/inter": "^4.5.11",
+    "@fontsource/lato": "^4.5.8",
     "@fontsource/manrope": "^4.5.10",
     "@fontsource/open-sans": "^4.5.10",
     "@fontsource/space-grotesk": "^4.5.8",
