--- a/package.json
+++ b/package.json
@@ -1,51 +1,24 @@
 {
   "name": "querylake",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@chakra-ui/icons": "^2.0.2",
-    "@chakra-ui/react": "^2.2.1",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@fontsource/inter": "^4.5.11",
-    "@fontsource/lato": "^4.5.8",
-    "@fontsource/manrope": "^4.5.10",
-    "@fontsource/open-sans": "^4.5.10",
-    "@fontsource/space-grotesk": "^4.5.8",
-    "@reduxjs/toolkit": "^1.8.3",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "firebase": "^9.8.4",
-    "framer-motion": "^6.3.16",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-query": "^3.39.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "concurrently 'cd frontend && npm start' 'cd backend && npm run dev' "
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zjhuang2/QueryLake.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/zjhuang2/QueryLake/issues"
+  },
+  "homepage": "https://github.com/zjhuang2/QueryLake#readme",
+  "dependencies": {
+    "axios": "^0.27.2",
+    "concurrently": "^7.3.0"
   }
 }
