--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/zjhuang2/QueryLake#readme",
   "dependencies": {
     "axios": "^0.27.2",
-    "concurrently": "^7.3.0"
+    "concurrently": "^7.3.0",
+    "express": "^4.18.1"
   }
 }
